# attendance

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  attendance_cli.py  attendance_gui.py  attendance_launcher.py  pyproject.toml  requirements.txt
docs/: clasificacion_contextual.md
examples/: classification_config.example.json
installer/: attendance_setup.iss
scripts/: build_installer.ps1  build_launcher.ps1  build_windows.ps1
src/attendance/: __init__.py  business.py  classification.py  core.py  declared_state.py  gui.py  time_calculation.py
tests/: test_attendance_business.py  test_launcher.py  test_report_personnel_validation.py
